q2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    DIV
    EQU
    EQUEQU
    GREATER
    GREATEREQU
    INTDIV
    LESS
    LESSEUQ
    LPAREN
    MUL
    NOTEQU
    POW
    RPAREN
    SCI
    SUB
    VAR

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> empty
Rule 3     expression -> INT
Rule 4     expression -> FLOAT
Rule 5     empty -> <empty>

Terminals, with rules where they appear

ADD                  : 
DIV                  : 
EQU                  : 
EQUEQU               : 
FLOAT                : 4
GREATER              : 
GREATEREQU           : 
INT                  : 3
INTDIV               : 
LESS                 : 
LESSEUQ              : 
LPAREN               : 
MUL                  : 
NOTEQU               : 
POW                  : 
RPAREN               : 
SCI                  : 
SUB                  : 
VAR                  : 
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 2
expression           : 1

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . empty
    (3) expression -> . INT
    (4) expression -> . FLOAT
    (5) empty -> .

    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    $end            reduce using rule 5 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .

    $end            reduce using rule 1 (calc -> expression .)


state 3

    (2) calc -> empty .

    $end            reduce using rule 2 (calc -> empty .)


state 4

    (3) expression -> INT .

    $end            reduce using rule 3 (expression -> INT .)


state 5

    (4) expression -> FLOAT .

    $end            reduce using rule 4 (expression -> FLOAT .)

